Fix Items not being considered valid and then breaking analysis. Increase handling for smithing transform recipes. Add support for decorated pots.