@@ -22,14 +22,17 @@ import com.ldtteam.aequivaleo.vanilla.api.util.Constants;
 import com.ldtteam.aequivaleo.vanilla.config.Configuration;
 import com.ldtteam.aequivaleo.vanilla.recipe.equivalency.BucketFluidRecipe;
 import com.ldtteam.aequivaleo.vanilla.recipe.equivalency.CookingEquivalencyRecipe;
+import com.ldtteam.aequivaleo.vanilla.recipe.equivalency.DecoratedPotEquivalencyRecipe;
 import com.ldtteam.aequivaleo.vanilla.recipe.equivalency.SimpleEquivalencyRecipe;
 import com.ldtteam.aequivaleo.vanilla.recipe.equivalency.SmithingEquivalencyRecipe;
 import com.ldtteam.aequivaleo.vanilla.recipe.equivalency.StoneCuttingEquivalencyRecipe;
+import net.minecraft.core.Holder;
 import net.minecraft.core.NonNullList;
 import net.minecraft.core.registries.BuiltInRegistries;
 import net.minecraft.core.registries.Registries;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerLevel;
+import net.minecraft.tags.ItemTags;
 import net.minecraft.tags.TagKey;
 import net.minecraft.world.item.BucketItem;
 import net.minecraft.world.item.Item;
@@ -39,6 +42,7 @@ import net.minecraft.world.item.crafting.LegacyUpgradeRecipe;
 import net.minecraft.world.item.crafting.Recipe;
 import net.minecraft.world.item.crafting.RecipeType;
 import net.minecraft.world.item.crafting.SmithingTransformRecipe;
+import net.minecraft.world.item.crafting.SmithingTrimRecipe;
 import net.minecraft.world.level.Level;
 import net.minecraft.world.level.material.Fluid;
 import net.minecraft.world.level.material.Fluids;
@@ -52,180 +56,67 @@ import java.util.Set;
 import java.util.SortedSet;
 import java.util.function.Function;
 import java.util.regex.Pattern;
-import java.util.stream.Collectors;
 
 @AequivaleoPlugin
-public class VanillaAequivaleoPlugin implements IAequivaleoPlugin
-{
+public class VanillaAequivaleoPlugin implements IAequivaleoPlugin {
     private static final Logger LOGGER = LogManager.getLogger();
 
     private Configuration configuration;
 
-    @Override
-    public String getId()
-    {
-        return "Vanilla";
-    }
-
-    @Override
-    public void onConstruction()
-    {
-        LOGGER.info("Started Aequivaleo vanilla plugin.");
-        IVanillaAequivaleoPluginAPI.Holder.setInstance(VanillaAequivaleoPluginAPI.getInstance());
-
-        configuration = new Configuration(ModLoadingContext.get().getActiveContainer());
-    }
-
-    @Override
-    public void onCommonSetup()
-    {
-        LOGGER.info("Running aequivaleo common setup.");
-        LOGGER.debug("Registering tags.");
-
-        configuration.getCommon().itemTagsToRegister
-          .get()
-          .stream()
-          .map(ResourceLocation::new)
-          .map(name -> TagKey.create(Registries.ITEM, name))
-          .forEach(ITagEquivalencyRegistry.getInstance()::addTag);
-
-        LOGGER.debug("Registering recipe processing types.");
-        IRecipeTypeProcessingRegistry.getInstance()
-          .registerAs(Constants.SIMPLE_RECIPE_TYPE, RecipeType.CRAFTING)
-          .registerAs(Constants.COOKING_RECIPE_TYPE, RecipeType.SMELTING, RecipeType.BLASTING, RecipeType.CAMPFIRE_COOKING, RecipeType.SMOKING)
-          .registerAs(Constants.STONE_CUTTING_RECIPE_TYPE, RecipeType.STONECUTTING)
-          .registerAs(Constants.SMITHING_RECIPE_TYPE, RecipeType.SMITHING);
-
-    }
-
-    @Override
-    public void onReloadStartedFor(final ServerLevel world)
-    {
-        final List<Recipe<?>> smeltingRecipe = Lists.newArrayList();
-
-        IRecipeTypeProcessingRegistry
-          .getInstance()
-          .getRecipeTypesToBeProcessedAs(Constants.COOKING_RECIPE_TYPE)
-          .forEach(type -> smeltingRecipe.addAll(getRecipes(type, world)));
-
-        StreamUtils.execute(
-          () -> smeltingRecipe
-            .parallelStream()
-            .forEach(recipe -> processSmeltingRecipe(world, recipe))
-        );
-
-        final List<Recipe<?>> stoneCuttingsRecipe = Lists.newArrayList();
-
-        IRecipeTypeProcessingRegistry
-          .getInstance()
-          .getRecipeTypesToBeProcessedAs(Constants.STONE_CUTTING_RECIPE_TYPE)
-          .forEach(type -> stoneCuttingsRecipe.addAll(getRecipes(type, world)));
-
-        StreamUtils.execute(
-          () -> stoneCuttingsRecipe
-              .parallelStream()
-              .forEach(recipe -> processStoneCuttingRecipe(world, recipe))
-        );
-
-        final List<Recipe<?>> smithingRecipe = Lists.newArrayList();
-
-        IRecipeTypeProcessingRegistry
-          .getInstance()
-          .getRecipeTypesToBeProcessedAs(Constants.SMITHING_RECIPE_TYPE)
-          .forEach(type -> smithingRecipe.addAll(getRecipes(type, world)));
-
-        StreamUtils.execute(
-          () -> smithingRecipe
-            .parallelStream()
-            .forEach(recipe -> processLegacySmithingRecipe(world, recipe))
-        );
-
-        final List<Recipe<?>> craftingRecipes = Lists.newArrayList();
-
-        IRecipeTypeProcessingRegistry
-          .getInstance()
-          .getRecipeTypesToBeProcessedAs(Constants.SIMPLE_RECIPE_TYPE)
-          .forEach(type -> craftingRecipes.addAll(getRecipes(type, world)));
-
-        StreamUtils.execute(
-          () ->craftingRecipes
-            .parallelStream()
-            .forEach(recipe -> processCraftingRecipe(world, recipe))
-        );
-
-        final List<Recipe<?>> genericRecipes = Lists.newArrayList();
-
-        final List<Pattern> blackListPatterns = configuration.getCommon().recipeTypeNamePatternsToExclude
-          .get()
-          .stream()
-          .map(Pattern::compile)
-          .collect(Collectors.toList());
-
-        final Set<RecipeType<?>> knownTypes = IRecipeTypeProcessingRegistry.getInstance().getAllKnownTypes();
-        BuiltInRegistries.RECIPE_TYPE.entrySet().stream()
-          .filter(entry -> !knownTypes.contains(entry.getValue()))
-          .filter(entry -> blackListPatterns.stream().noneMatch(blp -> blp.matcher(entry.getKey().location().toString()).find()))
-          .forEach(
-             entry -> genericRecipes.addAll(getRecipes(entry.getValue(), world))
-          );
-
-        StreamUtils.execute(
-          () -> genericRecipes
-            .parallelStream()
-            .forEach(recipe -> processGenericRecipe(world, recipe))
-        );
-    }
-
-    private static List<Recipe<?>> getRecipes(final RecipeType<?> type, final ServerLevel world)
-    {
-        if (world.getRecipeManager().recipes.get(type) == null)
-        {
+    private static List<Recipe<?>> getRecipes(final RecipeType<?> type, final ResourceLocation serializerName, final ServerLevel world) {
+        if (world.getRecipeManager().recipes.get(type) == null) {
             LOGGER.error("Could not find any recipes for recipe type: " + type + " its recipes array value is null!");
             return Lists.newArrayList();
         }
 
-        return Lists.newArrayList(world.getRecipeManager().recipes.get(type).values());
+        return world.getRecipeManager().recipes.get(type).values().stream().filter(recipe -> recipe.getType() == type)
+                .filter(recipe -> world.registryAccess().registryOrThrow(Registries.RECIPE_SERIALIZER).getKey(recipe.getSerializer()) == serializerName)
+                .toList();
     }
 
-    private static void processSmeltingRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe)
-    {
+    private static List<Recipe<?>> getRecipes(final RecipeType<?> type, final ServerLevel world) {
+        if (world.getRecipeManager().recipes.get(type) == null) {
+            LOGGER.error("Could not find any recipes for recipe type: " + type + " its recipes array value is null!");
+            return Lists.newArrayList();
+        }
+
+        return world.getRecipeManager().recipes.get(type).values().stream().filter(recipe -> recipe.getType() == type)
+                .toList();
+    }
+
+    private static void processSmeltingRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe) {
         processIRecipe(world, iRecipe, Recipe::getIngredients, (inputs, requiredKnownOutputs, outputs) -> new CookingEquivalencyRecipe(iRecipe.getId(), inputs, requiredKnownOutputs, outputs));
     }
 
-    private static void processCraftingRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe)
-    {
+    private static void processCraftingRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe) {
         processIRecipe(world, iRecipe, Recipe::getIngredients, (inputs, requiredKnownOutputs, outputs) -> new SimpleEquivalencyRecipe(iRecipe.getId(), inputs, requiredKnownOutputs, outputs));
     }
 
-    private static void processStoneCuttingRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe)
-    {
+    private static void processStoneCuttingRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe) {
         processIRecipe(world, iRecipe, Recipe::getIngredients, (inputs, requiredKnownOutputs, outputs) -> new StoneCuttingEquivalencyRecipe(iRecipe.getId(), inputs, requiredKnownOutputs, outputs));
     }
 
-    private static void processGenericRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe)
-    {
+    private static void processGenericRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe) {
         processIRecipe(world, iRecipe, Recipe::getIngredients, (inputs, requiredKnownOutputs, outputs) -> new GenericRecipeEquivalencyRecipe(iRecipe.getId(), inputs, requiredKnownOutputs, outputs));
     }
 
     @SuppressWarnings("removal")
-    private static void processLegacySmithingRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe)
-    {
+    private static void processLegacySmithingRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe) {
         processIRecipe(world,
-          iRecipe,
-          smithingRecipe -> {
-              if (!(smithingRecipe instanceof LegacyUpgradeRecipe))
-                  throw new IllegalArgumentException("Recipe is not a smithing recipe.");
+                iRecipe,
+                smithingRecipe -> {
+                    if (!(smithingRecipe instanceof LegacyUpgradeRecipe))
+                        throw new IllegalArgumentException("Recipe is not a smithing recipe.");
 
-              final NonNullList<Ingredient> ingredients = NonNullList.create();
-              ingredients.add(((LegacyUpgradeRecipe) smithingRecipe).base);
-              ingredients.add(((LegacyUpgradeRecipe) smithingRecipe).addition);
-              return ingredients;
-          },
-          (inputs, requiredKnownOutputs, outputs) -> new SmithingEquivalencyRecipe(iRecipe.getId(), inputs, requiredKnownOutputs, outputs));
+                    final NonNullList<Ingredient> ingredients = NonNullList.create();
+                    ingredients.add(((LegacyUpgradeRecipe) smithingRecipe).base);
+                    ingredients.add(((LegacyUpgradeRecipe) smithingRecipe).addition);
+                    return ingredients;
+                },
+                (inputs, requiredKnownOutputs, outputs) -> new SmithingEquivalencyRecipe(iRecipe.getId(), inputs, requiredKnownOutputs, outputs));
     }
 
-    private static void processSmithingTransformRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe)
-    {
+    private static void processSmithingTransformRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe) {
         processIRecipe(world,
                 iRecipe,
                 smithingRecipe -> {
@@ -233,6 +124,7 @@ public class VanillaAequivaleoPlugin implements IAequivaleoPlugin
                         throw new IllegalArgumentException("Recipe is not a smithing recipe.");
 
                     final NonNullList<Ingredient> ingredients = NonNullList.create();
+                    ingredients.add(((SmithingTransformRecipe) smithingRecipe).template);
                     ingredients.add(((SmithingTransformRecipe) smithingRecipe).base);
                     ingredients.add(((SmithingTransformRecipe) smithingRecipe).addition);
                     return ingredients;
@@ -240,41 +132,67 @@ public class VanillaAequivaleoPlugin implements IAequivaleoPlugin
                 (inputs, requiredKnownOutputs, outputs) -> new SmithingEquivalencyRecipe(iRecipe.getId(), inputs, requiredKnownOutputs, outputs));
     }
 
+    private static void processSmithingTrimRecipe(@NotNull final ServerLevel world, Recipe<?> iRecipe) {
+        processIRecipe(world,
+                iRecipe,
+                smithingRecipe -> {
+                    if (!(smithingRecipe instanceof SmithingTrimRecipe))
+                        throw new IllegalArgumentException("Recipe is not a smithing recipe.");
+
+                    final NonNullList<Ingredient> ingredients = NonNullList.create();
+                    ingredients.add(((SmithingTrimRecipe) smithingRecipe).template);
+                    ingredients.add(((SmithingTrimRecipe) smithingRecipe).base);
+                    ingredients.add(((SmithingTrimRecipe) smithingRecipe).addition);
+                    return ingredients;
+                },
+                (inputs, requiredKnownOutputs, outputs) -> new SmithingEquivalencyRecipe(iRecipe.getId(), inputs, requiredKnownOutputs, outputs));
+    }
+
+    private static void processDecoratedPotRecipe(@NotNull final ServerLevel world) {
+        world.registryAccess().registry(Registries.ITEM).orElseThrow()
+                .getTag(ItemTags.DECORATED_POT_SHARDS)
+                .ifPresent(holder -> {
+                    final List<Item> sherds = holder.stream().map(Holder::get).toList();
+                    final List<List<Item>> permutedSherds = IRecipeCalculator.getInstance().getAllPerturbations(sherds, 4);
+                    final List<DecoratedPotEquivalencyRecipe> recipes = permutedSherds.stream()
+                            .map(sherdList -> new DecoratedPotEquivalencyRecipe(world, sherdList.toArray(Item[]::new)))
+                            .toList();
+
+                    recipes.forEach(recipe -> IEquivalencyRecipeRegistry.getInstance(world.dimension()).register(recipe));
+                });
+    }
+
     private static void processIRecipe(
-      @NotNull final ServerLevel world,
-      final Recipe<?> iRecipe,
-      final Function<Recipe<?>, NonNullList<Ingredient>> ingredientExtractor,
-      final TriFunction<SortedSet<IRecipeIngredient>, SortedSet<ICompoundContainer<?>>, SortedSet<ICompoundContainer<?>>, IEquivalencyRecipe> recipeFactory
-    )
-    {
+            @NotNull final ServerLevel world,
+            final Recipe<?> iRecipe,
+            final Function<Recipe<?>, NonNullList<Ingredient>> ingredientExtractor,
+            final TriFunction<SortedSet<IRecipeIngredient>, SortedSet<ICompoundContainer<?>>, SortedSet<ICompoundContainer<?>>, IEquivalencyRecipe> recipeFactory
+    ) {
         try {
-            if (iRecipe.getResultItem(world.registryAccess()).isEmpty())
-            {
+            if (iRecipe.getResultItem(world.registryAccess()).isEmpty()) {
                 return;
             }
 
             final List<IEquivalencyRecipe> variants = IRecipeCalculator.getInstance().getAllVariants(
-              world,
-              iRecipe,
-              ingredientExtractor,
-              IRecipeCalculator.getInstance()::getAllVariantsFromSimpleIngredient,
-              recipeFactory
-            ).collect(Collectors.toList());
+                    world,
+                    iRecipe,
+                    ingredientExtractor,
+                    IRecipeCalculator.getInstance()::getAllVariantsFromSimpleIngredient,
+                    recipeFactory
+            ).toList();
 
             if (variants.isEmpty() && !iRecipe.getId().getNamespace().equals("minecraft")) {
                 LOGGER.error(String.format("Failed to process recipe: %s See ingredient error logs for more information.", iRecipe.getId()));
             }
 
             variants.forEach(recipe -> IEquivalencyRecipeRegistry.getInstance(world.dimension()).register(recipe));
-        }
-        catch (Exception ex)
-        {
+        } catch (Exception ex) {
             LOGGER.error("A recipe has throw an exception while processing: " + iRecipe.getId(), ex);
         }
     }
 
     private static void processBucketFluidRecipeFor(
-      @NotNull final Level world, final Item item) {
+            @NotNull final Level world, final Item item) {
         if (!(item instanceof final BucketItem bucketItem))
             return;
 
@@ -282,36 +200,179 @@ public class VanillaAequivaleoPlugin implements IAequivaleoPlugin
             return;
 
         final ICompoundContainer<?> emptyBucketContainer = ICompoundContainerFactoryManager.getInstance().wrapInContainer(
-          Items.BUCKET, 1
+                Items.BUCKET, 1
         );
         final IRecipeIngredient emptyBucketIngredient = new SimpleIngredientBuilder().from(emptyBucketContainer).createIngredient();
 
         final Fluid fluid = bucketItem.getFluid();
         final ICompoundContainer<?> fluidContainer = ICompoundContainerFactoryManager.getInstance().wrapInContainer(
-          fluid, 1000
+                fluid, 1000
         );
         final IRecipeIngredient fluidIngredient = new SimpleIngredientBuilder().from(fluidContainer).createIngredient();
 
         final ICompoundContainer<?> fullBucketContainer = ICompoundContainerFactoryManager.getInstance().wrapInContainer(
-          bucketItem, 1
+                bucketItem, 1
         );
         final IRecipeIngredient fullBucketIngredient = new SimpleIngredientBuilder().from(fullBucketContainer
         ).createIngredient();
 
         final BucketFluidRecipe fillingRecipe = new BucketFluidRecipe(
-          Sets.newHashSet(emptyBucketIngredient, fluidIngredient),
-          Sets.newHashSet(fullBucketContainer)
+                Sets.newHashSet(emptyBucketIngredient, fluidIngredient),
+                Sets.newHashSet(fullBucketContainer)
         );
         final BucketFluidRecipe emptyingRecipe = new BucketFluidRecipe(
-          Sets.newHashSet(fullBucketIngredient),
-          Sets.newHashSet(emptyBucketContainer, fluidContainer)
+                Sets.newHashSet(fullBucketIngredient),
+                Sets.newHashSet(emptyBucketContainer, fluidContainer)
         );
 
         IEquivalencyRecipeRegistry.getInstance(world.dimension()).register(
-          fillingRecipe
+                fillingRecipe
         );
         IEquivalencyRecipeRegistry.getInstance(world.dimension()).register(
-          emptyingRecipe
+                emptyingRecipe
+        );
+    }
+
+    @Override
+    public String getId() {
+        return "Vanilla";
+    }
+
+    @Override
+    public void onConstruction() {
+        LOGGER.info("Started Aequivaleo vanilla plugin.");
+        IVanillaAequivaleoPluginAPI.Holder.setInstance(VanillaAequivaleoPluginAPI.getInstance());
+
+        configuration = new Configuration(ModLoadingContext.get().getActiveContainer());
+    }
+
+    @Override
+    public void onCommonSetup() {
+        LOGGER.info("Running aequivaleo common setup.");
+        LOGGER.debug("Registering tags.");
+
+        configuration.getCommon().itemTagsToRegister
+                .get()
+                .stream()
+                .map(ResourceLocation::new)
+                .map(name -> TagKey.create(Registries.ITEM, name))
+                .forEach(ITagEquivalencyRegistry.getInstance()::addTag);
+
+        LOGGER.debug("Registering recipe processing types.");
+        IRecipeTypeProcessingRegistry.getInstance()
+                .registerAs(Constants.SIMPLE_RECIPE_TYPE, RecipeType.CRAFTING)
+                .registerAs(Constants.COOKING_RECIPE_TYPE, RecipeType.SMELTING, RecipeType.BLASTING, RecipeType.CAMPFIRE_COOKING, RecipeType.SMOKING)
+                .registerAs(Constants.STONE_CUTTING_RECIPE_TYPE, RecipeType.STONECUTTING)
+                .registerAs(Constants.SMITHING_RECIPE_TYPE, RecipeType.SMITHING)
+                .registerAs(Constants.SMITHING_TRANSFORM_RECIPE_TYPE, RecipeType.SMITHING)
+                .registerAs(Constants.SMITHING_TRIM_RECIPE_TYPE, RecipeType.SMITHING)
+                .registerAs(Constants.DECORATED_POT_RECIPE_TYPE, RecipeType.CRAFTING);
+
+    }
+
+    @SuppressWarnings("deprecation")
+    @Override
+    public void onReloadStartedFor(final ServerLevel world) {
+        final List<Recipe<?>> smeltingRecipe = Lists.newArrayList();
+
+        IRecipeTypeProcessingRegistry
+                .getInstance()
+                .getRecipeTypesToBeProcessedAs(Constants.COOKING_RECIPE_TYPE)
+                .forEach(type -> smeltingRecipe.addAll(getRecipes(type, world)));
+
+        StreamUtils.execute(
+                () -> smeltingRecipe
+                        .parallelStream()
+                        .forEach(recipe -> processSmeltingRecipe(world, recipe))
+        );
+
+        final List<Recipe<?>> stoneCuttingsRecipe = Lists.newArrayList();
+
+        IRecipeTypeProcessingRegistry
+                .getInstance()
+                .getRecipeTypesToBeProcessedAs(Constants.STONE_CUTTING_RECIPE_TYPE)
+                .forEach(type -> stoneCuttingsRecipe.addAll(getRecipes(type, world)));
+
+        StreamUtils.execute(
+                () -> stoneCuttingsRecipe
+                        .parallelStream()
+                        .forEach(recipe -> processStoneCuttingRecipe(world, recipe))
+        );
+
+        final List<Recipe<?>> legacySmithingRecipes = Lists.newArrayList();
+
+        IRecipeTypeProcessingRegistry
+                .getInstance()
+                .getRecipeTypesToBeProcessedAs(Constants.SMITHING_RECIPE_TYPE)
+                .forEach(type -> legacySmithingRecipes.addAll(getRecipes(type, Constants.SMITHING_RECIPE_TYPE, world)));
+
+        StreamUtils.execute(
+                () -> legacySmithingRecipes
+                        .parallelStream()
+                        .forEach(recipe -> processLegacySmithingRecipe(world, recipe))
+        );
+
+        final List<Recipe<?>> smithingTransformRecipes = Lists.newArrayList();
+
+        IRecipeTypeProcessingRegistry
+                .getInstance()
+                .getRecipeTypesToBeProcessedAs(Constants.SMITHING_TRANSFORM_RECIPE_TYPE)
+                .forEach(type -> smithingTransformRecipes.addAll(getRecipes(type, Constants.SMITHING_TRANSFORM_RECIPE_TYPE, world)));
+
+        StreamUtils.execute(
+                () -> smithingTransformRecipes
+                        .parallelStream()
+                        .forEach(recipe -> processSmithingTransformRecipe(world, recipe))
+        );
+
+        final List<Recipe<?>> smithingTrimRecipes = Lists.newArrayList();
+
+        IRecipeTypeProcessingRegistry
+                .getInstance()
+                .getRecipeTypesToBeProcessedAs(Constants.SMITHING_TRIM_RECIPE_TYPE)
+                .forEach(type -> smithingTrimRecipes.addAll(getRecipes(type, Constants.SMITHING_TRIM_RECIPE_TYPE, world)));
+
+        StreamUtils.execute(
+                () -> smithingTrimRecipes
+                        .parallelStream()
+                        .forEach(recipe -> processSmithingTrimRecipe(world, recipe))
+        );
+
+        processDecoratedPotRecipe(world);
+
+        final List<Recipe<?>> craftingRecipes = Lists.newArrayList();
+
+        IRecipeTypeProcessingRegistry
+                .getInstance()
+                .getRecipeTypesToBeProcessedAs(Constants.SIMPLE_RECIPE_TYPE)
+                .forEach(type -> craftingRecipes.addAll(getRecipes(type, world)));
+
+        StreamUtils.execute(
+                () -> craftingRecipes
+                        .parallelStream()
+                        .forEach(recipe -> processCraftingRecipe(world, recipe))
+        );
+
+        final List<Recipe<?>> genericRecipes = Lists.newArrayList();
+
+        final List<Pattern> blackListPatterns = configuration.getCommon().recipeTypeNamePatternsToExclude
+                .get()
+                .stream()
+                .map(Pattern::compile)
+                .toList();
+
+        final Set<RecipeType<?>> knownTypes = IRecipeTypeProcessingRegistry.getInstance().getAllKnownTypes();
+        BuiltInRegistries.RECIPE_TYPE.entrySet().stream()
+                .filter(entry -> !knownTypes.contains(entry.getValue()))
+                .filter(entry -> blackListPatterns.stream().noneMatch(blp -> blp.matcher(entry.getKey().location().toString()).find()))
+                .forEach(
+                        entry -> genericRecipes.addAll(getRecipes(entry.getValue(), world))
+                );
+
+        StreamUtils.execute(
+                () -> genericRecipes
+                        .parallelStream()
+                        .forEach(recipe -> processGenericRecipe(world, recipe))
         );
     }
 }
